[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_utils"
version = "0.1.0"
authors = [
  { name="Chris", email="youremail@example.com" },
]
description = "A Python utilities package"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
